<resources>
    <string name="app_name">OPSC PART 3</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_don_t_have_a_account">I Don\'t Have A Account</string>
    <string name="login_logon">Login/Logon</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_details_to_proceed">Login Details To Proceed</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="i_alreadu_have_a_new_account">I Alreadu Have A New Account</string>
    <string name="register">Register</string>
    <string name="please_confirm_password">Please Confirm Password</string>
    <string name="passwords">Password</string>
    <string name="email_address">Email Address</string>
    <string name="please_enter_your_information_for_a_new_account">Please enter your information for a new account</string>
    <string name="track_your_progress_effortlessly">Track Your Progress Effortlessly</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="timesheet_entry">Timesheet Entry</string>
    <string name="view_timesheet">View Timesheet</string>
    <string name="home_page">Home Page</string>
    <string name="save_entry">Save Entry</string>
    <string name="add_a_photo">Add A Photo</string>
    <string name="select_a_category">Select A Category</string>
    <string name="description">Description</string>
    <string name="select_an_end_time">Select An End time</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_a_start_time">Select A Start Time</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="selected_date">Selected Date</string>
    <string name="select_a_date">Select A Date</string>
    <string name="main_category">Main Category</string>
    <string name="your_name">Your Name</string>
    <string name="category_creation">Category Creation</string>
    <string name="home_back">Home Back</string>
</resources>