<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".categoryCreationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_creation"
        android:textSize="48sp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="@string/your_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonCreateCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_category"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>